--- a/extension/background.html
+++ b/extension/background.html
@@ -34,6 +34,7 @@
 
 			var openNotification = function(type, notification)
 			{
+				clearTimeout(timeouts[type]);
 				closeNotification(type, true);
 				openNotifications[type] = {
 					notification: notification,
