--- a/extension/settings.html
+++ b/extension/settings.html
@@ -286,7 +286,7 @@
 
 				<div class="fb-like float_left" data-href="http://www.facebook.com/pandoraenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 				<div class="float_left" id="gplus">
-					<div class="g-plusone" data-href="https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg"></div>
+					<div class="g-plusone" data-size="medium" data-href="https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg"></div>
                 </div>
 				<div class="float_left" id="twitter"><a href="https://twitter.com/PandoraEnhancer" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a></div>
                 
