--- a/extension/background.html
+++ b/extension/background.html
@@ -19,7 +19,7 @@
 					setTimeout(
 					(function(){
 						closeNotification(type, false);
-					}), 2000);
+					}), localStorage["notification_timeout"]*1000);
 				}
 			};
 
