gotta run, here's what i got so far. need to make the 'always show notification window' code in background hide /only/ when there's a songChange. check localStorage['notification_always_show'] == "true"

--- a/extension/background.html
+++ b/extension/background.html
@@ -159,6 +159,7 @@
                     notification_song_change:       localStorage["notification_song_change"],
                     notification_video_ad:          localStorage["notification_video_ad"],
                     notification_still_listening:   localStorage["notification_still_listening"],
+                    notification_always_show:       localStorage["notification_always_show"],
 					header_config:					localStorage["header_config"],
                     player_controls:                localStorage["player_controls"],
                     debug_mode:						localStorage["debug_mode"],
