notification on skip limit. 1.1.0 rc

--- a/extension/notification.html
+++ b/extension/notification.html
@@ -26,7 +26,7 @@
                     case "play":
                         $(this).hide();
                         $("#pause").show();
-                        bgPage.window.playerControl("play");
+                        bgPage.window.playerControl("play", false);
                         break;
                     case "pause":
                         $(this).hide();
