--- a/extension/settings.html
+++ b/extension/settings.html
@@ -400,6 +400,7 @@
 
                         <div id="notifications">
                             <input class="setting_checkbox" type="checkbox" name="notification_song_change" id="notification_song_change"><label for="notification_song_change">when the song has changed</label><br />
+                            <input class="setting_checkbox" type="checkbox" name="notification_skip_limit" id="notification_skip_limit"><label for="notification_skip_limit">when skip limit has been reached</label><br />
                             <input class="setting_checkbox" type="checkbox" name="notification_still_listening" id="notification_still_listening"><label for="notification_still_listening">when "Still Listening?" dialog is skipped</label><br />
                             <input class="setting_checkbox" type="checkbox" name="notification_video_ad" id="notification_video_ad"><label for="notification_video_ad">when a video ad is blocked</label><br />
                             <input class="setting_checkbox" type="checkbox" name="player_controls" id="player_controls"><label for="player_controls">show player controls in notification</label><br />
