--- a/extension/settings.html
+++ b/extension/settings.html
@@ -393,8 +393,8 @@
                             <div id="scrobbleTokenContainer">
                                 <span id="scrobbleToken"></span><button id="scrobbleLogoutButton">Logout</button>
                             </div>
-                            <!--<input class="setting_checkbox" type="checkbox" name="love_with_like" id="love_with_like"><label for="love_with_like">love song on last.fm when I thumb up on Pandora</label><br />
-                            <label for="scrobble_delay">song scrobble delay (seconds):</label><input type="text" class="setting_textbox" name="scrobble_delay" maxlength="4" />-->
+                            <input class="setting_checkbox" type="checkbox" name="lastfm_love_with_like" id="lastfm_love_with_like"><label for="lastfm_love_with_like">love song on last.fm when I thumb up on Pandora</label><br />
+                            <!--<label for="scrobble_delay">song scrobble delay (seconds):</label><input type="text" class="setting_textbox" name="scrobble_delay" maxlength="4" />-->
 
                         </div>
 
