weird. scrobbling works. anyway, 1.1.0 rc3 i think

--- a/extension/background.html
+++ b/extension/background.html
@@ -184,6 +184,7 @@
                     player_controls:                localStorage["player_controls"],
                     debug_mode:						localStorage["debug_mode"],
                     lastfm_love_with_like:          localStorage["lastfm_love_with_like"],
+                    scrobble_delay:                 localStorage["scrobble_delay"],
 					scrobble_session_key:			localStorage["scrobble_session_key"],
 					scrobble_session_name:			localStorage["scrobble_session_name"]
                 };
