lol stupid facebook like button overlay

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -157,6 +157,10 @@
                 float: left;
                 padding: 0 5px 10px 0;
             }
+            
+            .clear {
+                clear: both;
+            }
         </style>
 
         <script type="text/javascript">
@@ -361,11 +365,13 @@
 
                     <!-- <div class="float_left" id="twitter"><a href="https://twitter.com/PandoraEnhancer" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a></div> -->
 
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg" data-text="Check out PandoraEnhancer for Chrome!" data-count="horizontal" data-via="PandoraEnhancer">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+                    <div class="float_left" id="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg" data-text="Check out PandoraEnhancer for Chrome!" data-count="horizontal" data-via="PandoraEnhancer">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></div>
 
-                    <div class="fb-like float_left" data-href="http://www.facebook.com/pandoraenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+                    <div class="fb-like float_left" data-href="http://www.facebook.com/pandoraenhancer" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="margin-left: 25px;"></div>
                 </div>
 
+                <div class="clear"></div>
+                
                 <div class="tabBox">
                     <ul class="tabs">
                         <li id="general" class="selected"><a href="#">General</a></li>
