last.fm unlove works. not implemented anywhere.

--- a/extension/background.html
+++ b/extension/background.html
@@ -373,6 +373,14 @@
                                 songName:   notificationParams.songName,
                             });
                         }
+                        
+                        if (request.lasfm == 'unlove')
+                        {
+                            responseDispatcher('unloveTrack', {                                
+                                artistName: notificationParams.artistName,
+                                songName:   notificationParams.songName,
+                            });
+                        }
                     }
                     if(request.showPageAction)
                     {
