de-censor lyrics is a setting now. 1.1.0 rc4

--- a/extension/background.html
+++ b/extension/background.html
@@ -168,6 +168,7 @@
             {
                 var settings = {
                     selectable_lyrics:				localStorage["selectable_lyrics"],
+                    decensor_lyrics:                localStorage["decensor_lyrics"],
                     remove_ads:						localStorage["remove_ads"],
                     remove_promobox:				localStorage["remove_promobox"],
                     remove_videos:					localStorage["remove_videos"],
@@ -191,6 +192,7 @@
                 
                 var defaults = {
                     selectable_lyrics:              true,
+                    decensor_lyrics:                false,
                     remove_ads:                     true,
                     remove_promobox:                true,
                     remove_videos:                  true,
