--- a/extension/settings.html
+++ b/extension/settings.html
@@ -88,8 +88,8 @@
             .tabBox .tabs li {
                 float: left;
                 list-style: none;
-                margin: 0;
-                padding: .25em .25em 0;
+                margin-top: 4px;
+				margin-right: 4px;
                 height: 2em;
                 overflow: hidden;
                 position: relative;
@@ -124,6 +124,7 @@
             }
 
             .tabBox .content {
+				height: 180px; /*should change if we add new settings*/
                 clear: left;
                 position: relative;
                 z-index: 2;
