removes album from track.love and removes hook for lyrics since we already have that.

--- a/extension/background.html
+++ b/extension/background.html
@@ -354,8 +354,7 @@
                         {
                             responseDispatcher('loveTrack', {
 								artistName: msgParams.artistName,
-								songName:   msgParams.songName,
-								albumName:	msgParams.albumName
+								songName:   msgParams.songName
 							});
                         }
                         
