--- a/extension/settings.html
+++ b/extension/settings.html
@@ -128,7 +128,7 @@
                 clear: left;
                 position: relative;
                 z-index: 2;
-                padding: 10px;
+                padding: 10px 5px 15px;
                 border: 1px solid #CCC;
                 background: #FFF;
                 -webkit-border-radius: 3px;
