tracking bar on the player controls! it works mostly, sometimes there's an issue calculating the percentage and the bar glitches out for a second, but it fixes itself on the next interval. okay, i'm tired.

--- a/extension/background.html
+++ b/extension/background.html
@@ -142,6 +142,7 @@
                         +'&songName='+info.songName
                         +'&albumName='+info.albumName
                         +'&isLiked='+info.isLiked
+                        +'&tabID='+tabID
                         +hidden
                     );
                 }
@@ -285,12 +286,6 @@
                     scrobbleUpdate: action
                 }, function(response){});
             }
-            
-
-            //message listeners
-            chrome.extension.getViews({type:"notification"}).forEach(function(win) {
-                win.refreshPandora();
-            });
             
             chrome.extension.onRequest.addListener(function(request, sender, sendResponse)
             {
