--- a/extension/settings.html
+++ b/extension/settings.html
@@ -270,7 +270,7 @@
                     if(saved)
                         {
                         debugLog("saved settings");
-                        bgPage.refreshPandora();
+                        bgPage.window.refreshPandora();
                         window.close();
                     } else {
                         debugLog("did not save settings - uh oh!");
