station list on notification, optional. defaults to false currently, imo.

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -70,6 +70,7 @@
                             <input class="setting_checkbox" type="checkbox" name="notification_still_listening" id="notification_still_listening"><label for="notification_still_listening">when "Still Listening?" dialog is skipped</label><br />
                             <input class="setting_checkbox" type="checkbox" name="notification_video_ad" id="notification_video_ad"><label for="notification_video_ad">when a video ad is blocked</label><br />
                             <input class="setting_checkbox" type="checkbox" name="player_controls" id="player_controls"><label for="player_controls">show player controls in notification</label><br />
+                            <input class="setting_checkbox" type="checkbox" name="notification_show_station_list" id="notification_show_station_list"><label for="notification_show_station_list">show station list in notification</label><br />
                             <input class="setting_checkbox" type="checkbox" name="notification_always_show" id="notification_always_show"><label for="notification_always_show">always show notification window</label><br />
                             <label for="notification_timeout">Display length (seconds):</label><input type="text" class="setting_textbox" name="notification_timeout" id="notification_timeout" maxlength="4">
                         </div>
