--- a/extension/settings.html
+++ b/extension/settings.html
@@ -37,6 +37,7 @@
                         <li id="general" class="selected"><a href="#">General</a></li>
                         <li id="lastfm"><a href="#">last.fm</a></li>
                         <li id="notifications"><a href="#">Notifications</a></li>
+                        <li id="about"><a href="#">?</a></li>
                     </ul>
 
 
@@ -75,6 +76,18 @@
                             <label for="notification_timeout">Display length (seconds):</label><input type="text" class="setting_textbox" name="notification_timeout" id="notification_timeout" maxlength="4">
                         </div>
 
+                        <div id="about">
+                            <span id="header">PandoraEnhancer <span class="PE-version">80085</span></span>
+                            <hr>
+                            <span class="link" id="brandon">Brandon Sachs</span> - http://brandon-sachs.com
+                            <br>
+                            <span class="link" id="curt">Curt Hostetter</span> &nbsp; - http://curthostetter.com
+                            <br><br>
+                            Follow us on twitter - @PandoraEnhancer
+                            <br>
+                            Find a bug? Let us know (via twitter)!
+                        </div>
+
                     </div>
                 </div>
 
@@ -85,7 +98,7 @@
 
 
                 <div id="about_pandora_enhancer">
-                    PandoraEnhancer (v<span id="PE-version">80085</span>) by <span class="link" id="brandon">Brandon Sachs</span> & <span class="link" id="curt">Curt Hostetter</span>
+                    PandoraEnhancer (v<span class="PE-version">80085</span>) by <span class="link" id="brandon">Brandon Sachs</span> & <span class="link" id="curt">Curt Hostetter</span>
                 </div>
 
             </div>
