--- a/extension/settings.html
+++ b/extension/settings.html
@@ -31,6 +31,12 @@
                 </div>
 
                 <div class="clear"></div>
+                
+                <div class="first_run">
+                    <b>Thanks for installing PandoraEnhancer!</b>
+                    <br>
+                    This is the first time you've run PandoraEnhancer, you can access this settings window via the address bar icon when on Pandora.com, or via the user menu (where your username is on the top right of Pandora.com).
+                </div>
 
                 <div class="tabBox">
                     <ul class="tabs">
