? => About switched link on names. better check for unlimitedskip button.

--- a/extension/notification.html
+++ b/extension/notification.html
@@ -38,10 +38,10 @@
                 <!-- <input type="range"  min="0" max="100" style="width: 95%" /> -->
                 <div id="tracking"></div>
 
-                <dl class="station_list">
+                <!--<dl class="station_list">
                     <dt><a href="#"><span>&nbsp;[+]</span></a></dt>
-                    <dd><ul><!-- stuff gets generated here --></ul></dd>
-                </dl>
+                    <dd><ul></ul></dd>
+                </dl>-->
 
             </div>
 
