--- a/extension/settings.html
+++ b/extension/settings.html
@@ -43,7 +43,7 @@
                         <li id="general" class="selected"><a href="#">General</a></li>
                         <li id="lastfm"><a href="#">last.fm</a></li>
                         <li id="notifications"><a href="#">Notifications</a></li>
-                        <li id="about"><a href="#">?</a></li>
+                        <li id="about"><a href="#">About</a></li>
                     </ul>
 
 
@@ -85,9 +85,9 @@
                         <div id="about">
                             <span id="header">PandoraEnhancer <span class="PE-version">80085</span></span>
                             <hr>
-                            <span class="link" id="brandon">Brandon Sachs</span> - http://brandon-sachs.com
+                            Brandon Sachs - <span class="link" id="brandon">http://brandon-sachs.com</span>
                             <br>
-                            <span class="link" id="curt">Curt Hostetter</span> &nbsp; - http://curthostetter.com
+                            Curt Hostetter &nbsp; - <span class="link" id="curt">http://curthostetter.com</span>
                             <br><br>
                             Follow us on twitter - @PandoraEnhancer
                             <br>
