this should be release version 1.2.0, barring any bugs

--- a/extension/notification.html
+++ b/extension/notification.html
@@ -38,17 +38,16 @@
                 <!-- <input type="range"  min="0" max="100" style="width: 95%" /> -->
                 <div id="tracking"></div>
 
+                <!--
                 <dl class="station_list">
                     <dt><a href="#"><span>&nbsp;[+]</span></a></dt>
-                    <dd><ul><!-- stuff gets generated here --></ul></dd>
+                    <dd><ul> stuff here </ul></dd>
                 </dl>
+                -->
 
             </div>
 
             <!-- <select id="station_listing"></select> -->
-
-
-
 
             <!--
             <div id="tracking-container">
