--- a/extension/settings.html
+++ b/extension/settings.html
@@ -85,7 +85,7 @@
                             <br><br>
                             Follow us on twitter - @PandoraEnhancer
                             <br>
-                            Find a bug? Let us know (<span class="link" id="bug">http://cbcoding.com</span>)!
+                            Found a bug? Let us know - <span class="link" id="bug">http://cbcoding.com</span>
                         </div>
 
                     </div>
