--- a/extension/settings.html
+++ b/extension/settings.html
@@ -83,7 +83,7 @@
                             <br>
                             Curt Hostetter &nbsp; - <span class="link" id="curt">http://curthostetter.com</span>
                             <br><br>
-                            Follow us on twitter - @PandoraEnhancer
+                            Follow us on twitter - <span class="link" id="twitter">@PandoraEnhancer</span>
                             <br>
                             Found a bug? Let us know - <span class="link" id="bug">http://cbcoding.com</span>
                         </div>
