donate stuff plus starting lightbox. ignore this.

--- a/extension/message.html
+++ b/extension/message.html
@@ -28,23 +28,20 @@
         }
 
         div#header {
-            text-align: center;
-            font-size: 1.5em;
+            font-size: 1em;
             font-weight: 900;
             color: #082247;
-            margin: 5px 0;
             border-bottom: 1px solid #d0d0d0;
         }
 
         div#header > .enhancer { color: #0e3d7f; }
 
         div#content {
-            padding: 5px;
+            padding: 5px 0;
         }
 
         div#content > #date {
             padding-bottom: 5px;
-            font-weight: 900;
         }
 
         #about_pandora_enhancer{
@@ -96,8 +93,8 @@
             </div>
 
             <div id="content">
-                <div id="date">fuck your date</div>
-                <div id="message">shut up</div>
+                <div id="date">January 28, 2012</div>
+                <div id="message">whatevs</div>
             </div>
 
         </div>
