--- a/extension/settings.html
+++ b/extension/settings.html
@@ -101,7 +101,7 @@
                                 
                                 <span id="right">
                                     <!--If you donate <span class="donation_amount total">$5</span>, after PayPal fees we will receive <span class="donation_amount after_fees">$4.55</span>. Click the PayPal icon to continue.-->
-                                    We've worked hard to bring you this free program. How much was our time worth to you? Give us your fucking money.
+                                    If you like the extension, any contribution is appreciated. We build PandoraEnhancer in our spare time, click the icon to the left to donate to the project.
                                 </span>
                             </span>
                             
