--- a/extension/settings.html
+++ b/extension/settings.html
@@ -95,7 +95,7 @@
                                 <span id="left">
                                     <!--<input name="donation_amount" id="donation_amount" type="range" min="1" max="50" value="5">-->
                                     <a id="donation_link" target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=paypal@friedwalrus.com&currency_code=USD&item_name=PandoraEnhancer+Donation&return=http://http://cbcoding.com/?page_id=29">
-                                        <img src="images/paypal.png">
+                                        <img src="images/paypal.png" />
                                     </a>
                                 </span>
                                 
