--- a/extension/settings.html
+++ b/extension/settings.html
@@ -62,7 +62,7 @@
                                 <span id="scrobbleToken"></span><button id="scrobbleLogoutButton">Logout</button>
                                 <br />
                                 <input class="setting_checkbox" type="checkbox" name="lastfm_love_with_like" id="lastfm_love_with_like"><label for="lastfm_love_with_like">love song on last.fm when I thumb up on Pandora</label><br />
-                                <!--<label for="scrobble_delay">song scrobble delay (seconds):</label><input type="text" class="setting_textbox" name="scrobble_delay" maxlength="4" />-->
+                                <label for="scrobble_delay">song scrobble delay (seconds):</label><input type="text" class="setting_textbox" name="scrobble_delay" maxlength="4" />
                             </div>
                         </div>
 
